[package]
name = "weather-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen-futures = "0.4.30"
reqwasm = "0.5.0"
wasm-logger = "0.2.0"
log = "0.4.19"